# haskellbook

./: .gitignore  Cipher.hs  Jammin.hs  Jammin_flymake.hs  PoemLines.hs  README.md  chap11BinTree.hs  chap11decons.hs  chapter10.hs  chapter11.hs  chapter2.hs  chapter3.hs  chapter3_2.hs  chapter5.hs  chapter6.hs  chapter8.hs  chapter9.hs  haskellbook.cabal
app/: Chapter7.hs  Main.hs
chapter10/: chapter10.hs
chapter11/: chap11BinTree.hs  chapter11.hs  chapter11construct.hs
chapter12/: EqCaseGuard.hs  SmartConstructor.hs  exercises.hs
chapter14/: stack.yaml
chapter14/morse/: TAGS  morse.cabal  stack.yaml
chapter14/morse/app/: Main.hs
chapter14/morse/src/: Lib.hs  Morse.hs
chapter14/morse/test/: Spec.hs
chapter14/testing/: Addition.hs  TAGS  WordNumber.hs  WordNumberTest.hs  testing.cabal
chapter14/testing/app/: Main.hs
chapter15/exercises/: ChapterSemigroupExercises.hs  Exercises.hs
chapter15/madlibs/: MadLibs.hs
chapter15/orphan-instance/: Listy.hs
chapter15/tests/: AssocCheck.hs  Patience.hs
chapter16/: BadNat.hs  ChapterExercises.hs  Examples.hs  Exercises.hs  FlipFunctor.hs  ReplaceExperiment.hs
chapter17/: Exercises.hs  ListApplicativeExercise.hs.2016-06-03T19:29:47+0100  stack.yaml
chapter17/BadMonoid/: BadMonoid.cabal
chapter17/BadMonoid/app/: BadMonoid.hs  ChapterExercises.hs  ChapterExercises2.hs  Exercises.hs  ListApplicative.hs  ValidationApplicative.hs  ZipListApplicative.hs
chapter17/BadMonoid/src/: Apl1.hs  BadMonoid.hs
chapter18/: BadMonad.hs  EitherMonad.hs  chapter18.cabal
chapter18/src/: BadMonad.hs  ChapterExercises.hs  Composition.hs  EitherMonad.hs  Exercises.hs
chapter19/lifting/: lifting.cabal  stack.yaml
chapter19/lifting/src/: Lib.hs
chapter19/parsingExamples/: parsingExamples.cabal  stack.yaml
chapter19/parsingExamples/src/: Lib.hs
chapter19/scottymonoid/: scottymonoid.cabal
chapter19/scottymonoid/src/: Lib.hs
chapter19/shawty/: shawty.cabal
chapter19/shawty/app/: Main.hs
chapter19/socketExample/: socketExample.cabal
chapter19/socketExample/src/: Lib.hs
chapter19/workedexample/: workedexample.cabal
chapter19/xmonadexample/: stack.yaml  xmonadexample.cabal
chapter19/xmonadexample/src/: Lib.hs
chapter20/: chapter20.cabal
chapter20/src/: Lib.hs
chapter21/: chapter21.cabal
chapter21/src/: ChapterExercises.hs  HttpStuff.hs  Lib.hs
chapter21/test/: Spec.hs
chapter22/: chapter22.cabal
chapter22/src/: ChapterExamples.hs  ChapterExercises.hs  Exercises.hs
chapter23/: chapter23.cabal
chapter23/src/: ChapterExercises.hs  FizzBuzz.hs  Lib.hs
chapter24/: chapter24.cabal
chapter24/src/: AltParsing.hs  ChapterExercises.hs  Exercises.hs  IniParser.hs  Intermission.hs  LearnParsers.hs  Marshalling.hs  PolyParser.hs
chapter24/test/: DataIni.hs  Main.hs  Spec.hs
chapter25/: chapter25.cabal
chapter25/src/: Exercises.hs
chapter26/: chapter26.cabal
chapter26/src/: ChapterExercises.hs  ChapterExercisesFixCode.hs  ChapterExercisesFixScotty.hs  Exercises.hs  Lib.hs  Morra.hs  OuterInner.hs  scotty.hs  scottyTransExample1.hs
chapter27/: chapter27.cabal  chapter27.cabal~
chapter27/app/: Main.hs
chapter27/src/: ChapterExercises.hs  CoreDump.hs  Lib.hs  ManualBang.hs  StrictTest.hs  StrictTest2.hs  StrictTest3.hs  StrictTest4.hs
chapter28/: chapter28.cabal  profilingCAF.prof  profilingCAF2.prof  profilingHeap.hp  profilingHeap.prof  profilingTime.prof
chapter28/app/: VectorExercise.hs
chapter28/src/: ChapterExercises.hs  ChapterExercises2.hs  Exercises.hs  bytestringtest.hs  mapcompare.hs  profilingCAF.hs  profilingCAF2.hs  profilingHeap.hs  profilingTime.hs  sequencetest.hs  settest.hs  stringtobytestring.hs  texttest.hs  vectortest.hs  vectorupdate.hs  vectorupdate2.hs
chapter29/: chapter29.cabal  chapter29.cabal~  stack.yaml
chapter29/resources/: testinbutwontparsebecausefilename.inot
chapter29/src/: ChapterExercises.hs  ChapterExercises.hs~  IORefTrans.hs  IORefTrans.hs~  NestedIO.hs  NestedIO.hs~  WhatHappens.hs  WhatHappens.hs~  WhatHappens2.hs  WhatHappens2.hs~  WhatsShared.hs  WhatsShared.hs~
chapter30/: chapter30.cabal
chapter30/src/: AsyncExceptions.hs  OurExceptions.hs  OurExceptions2.hs  StoppingTheParty.hs  TryExcept.hs  TryExcept.hs~  UnforcedBottom.hs  WhySomeException.hs  writePls.hs
chapter31/: chapter31.cabal  chapter31.cabal~
chapter31/resources/: finger.db
chapter31/src/: Debug.hs  Debug.hs~  RWCDemo.hs  RWCDemo.hs~  UserTools.hs
chapter4/: chapter4.hs
chapter9/: chapter9.hs
src/: Chapter11Huttons.hs  Chapter11Phone.hs  Cipher.hs  chap11decons.hs
src/chapter13/: chap13Exercises.hs
test/: Spec.hs
