name:                chapter24
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/chapter24#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       aeson,
                       attoparsec >= 0.13.0.2,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.6.0,
                       containers >= 0.5.6.2,
                       hspec >= 2.2.3,
                       parsers >= 0.12.4,
                       raw-strings-qq,
                       scientific >= 0.3.4.9,
                       text >= 1.2.2.1,
                       transformers >= 0.4.2.0,
                       trifecta, time >= 1.5.0
  default-language:    Haskell2010

executable chapter24-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , attoparsec >= 0.13.0.2
                     , base
                     , bytestring >= 0.10.6.0
                     , chapter24
                     , containers >= 0.5.6.2
                     , hspec >= 2.2.3
                     , parsers >= 0.12.4
                     , raw-strings-qq
                     , scientific >= 0.3.4.9
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , trifecta, time >= 1.5.0
  default-language:    Haskell2010

test-suite chapter24-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aeson
                     , attoparsec >= 0.13.0.2
                     , base
                     , bytestring >= 0.10.6.0
                     , chapter24
                     , containers >= 0.5.6.2
                     , hspec >= 2.2.3
                     , parsers >= 0.12.4
                     , raw-strings-qq
                     , scientific >= 0.3.4.9
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , trifecta, time >= 1.5.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/chapter24
